# TextJokEditor

./: .gitignore  CMakeCache.txt  CMakeLists.txt  TextJokEditor  cmake_install.cmake  main.cpp  menubar.cpp  menubar.h  picturemap.cpp  picturemap.h  settingseditor.cpp  settingseditor.h  settingseditor.ui  textjokeditor.cpp  textjokeditor.h  textjokeditor.ui  toolbar.cpp  toolbar.h  workplace.cpp  workplace.h
TextJokEditor_autogen/: mocs_compilation.cpp
resources/: resources.qrc
